src/test/data/c/fail/syntax_return.c.err
data/c/fail/syntax_return.c:4:1-2: error: invalid syntax
 4 | }
   | ^
